--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.4'
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.0-alpha5'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
+    implementation 'com.formdev:flatlaf:2.2'
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.8.2'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
